--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,50 @@
 html {
   box-sizing: border-box;
+  background-color: #e2e2e2;
+  font-family: Open Sans, sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+header {
+  font-size: 2rem;
+  text-align: center;
+}
+
+section {
+  display: flex;
+  text-align: left;
+}
+
+img {
+  width: 100px;
+}
+
+h2 {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+h3 {
+  font-size: .875rem;
+  font-style: italic;
+  margin-top: 0;
+}
+
+p {
+  font-size: 1rem;
+}
+
+a {
+  text-decoration: none;
+  border: 2px solid #333;
+  background-color: #333;
+  border-radius: 6px;
+  color: #e2e2e2;
+  font-size: .875rem;
+  padding: .1rem 3rem .1rem .5rem;
 }
