--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  margin: 0;
   background-color: #f2f2f2;
 }
 
@@ -49,6 +50,8 @@ section {
 img {
   display: block;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .img {
@@ -64,11 +67,13 @@ h2 {
 h3 {
   font-size: .875rem;
   font-style: italic;
-  margin-top: 0;
+  margin: 0;
 }
 
 p {
   font-size: 1rem;
+  margin: 0;
+  padding-bottom: 1.5rem;
 }
 
 .btn {
