--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ header {
 section {
   display: flex;
   text-align: left;
+  padding: .75rem;
 }
 
 .card {
@@ -62,6 +63,7 @@ h2 {
   font-size: 1rem;
   font-weight: bold;
   margin-bottom: 0;
+  padding-top: .75rem;
 }
 
 h3 {
