--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ header {
 section {
   display: flex;
   text-align: left;
-  padding: .75rem;
+  padding: 1.5rem;
 }
 
 .card {
@@ -63,7 +63,7 @@ h2 {
   font-size: 1rem;
   font-weight: bold;
   margin-bottom: 0;
-  padding-top: .75rem;
+  padding-top: .45rem;
 }
 
 h3 {
