--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ header {
 section {
   display: flex;
   text-align: left;
-  padding: .5rem 1.5rem 1.5rem 1.5rem;
+  padding: .2rem 1.5rem 1.5rem;
 }
 
 .card {
@@ -82,6 +82,7 @@ p {
   font-size: 1rem;
   margin: 0;
   padding-bottom: 1.5rem;
+  flex-grow: 1;
 }
 
 .btn {
@@ -90,12 +91,13 @@ p {
   background-color: #333;
   border-radius: 6px;
   color: #e2e2e2;
-  font-size: .875rem;
-  padding: .1rem 3rem .1rem .5rem;
+  padding: .1rem .75rem .1rem .5rem;
+  display: inline-block;
+  width: 100%;
 }
 
 .btn-small {
-  font-size: .5rem;
+  font-size: .875rem;
 }
 
 .btn:hover {
