--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ p {
   background-color: #333;
   border-radius: 6px;
   color: #e2e2e2;
-  padding: .1rem .75rem .1rem .5rem;
+  padding: 1.5rem 1.5rem;
   display: inline-block;
   width: 100%;
 }
